fixing margin on smaller devices

--- a/css/site.styl
+++ b/css/site.styl
@@ -466,9 +466,11 @@ h1,h2,h3,h4,h5
 
 #container
   margin-top 50px
-  &.container-fluid
-    margin-left 50px
-    margin-right 50px
+
+  +breakpoint("desktop")
+    &.container-fluid
+      margin-left 50px
+      margin-right 50px
 
 .tab
 	@extend .small-caps;
